--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,14 @@
+[tool.poetry]
+name = "quantum-test-circuit"
+version = "0.1.0"
+description = ""
+authors = []
+
+[tool.poetry.dependencies]
+python = "^3.10"
+orquestra = "1.2"
+qiskit = "0.37.2"
+
 
 [build-system]
 requires = ["setuptools", "wheel",  "setuptools_scm>=6.0"]
